syntax = "proto3";
package osmosis.incentives;

import "gogoproto/gogo.proto";

option go_package = "github.com/osmosis-labs/osmosis/x/incentives/types";

message AutoStaking {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.stringer)         = true;

  string address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  string autostaking_validator = 2;
  // string autostaking_rate = 3 [
  //   (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
  //   (gogoproto.moretags) = "yaml:\"autostake_rate\"",
  //   (gogoproto.nullable) = false
  // ];
}
